manifests/nst/all.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nst
  labels:
    app: nst
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nst
  template:
    metadata:
      labels:
        app: nst
    spec:
      containers:
        - name: nst
          image: lexfrei/nst:1.0.13
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: nst
  labels:
    app: nst
spec:
  selector:
    app: nst
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nst-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: tunnel

    external-dns.alpha.kubernetes.io/target: "4a0cf464-58f0-4d24-87cd-e87ad3c0a136.cfargotunnel.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: nst.masha.film
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nst
                port:
                  name: http
